TINY-10017: menu items will no longer overflow the menu containing them. (#8921)

--- a/modules/oxide/src/less/theme/components/menu/menu.less
+++ b/modules/oxide/src/less/theme/components/menu/menu.less
@@ -42,6 +42,10 @@
       overflow-wrap: break-word;
       word-break: normal;
     }
+
+    .tox-dialog__popups .tox-menu .tox-collection__item-label {
+      word-break: break-all;
+    }
   }
 
   // Reset all margins for block elements when used in menu labels
